--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body {
-    /* background-color: 		#000000; */
+    background-color: 		#000000;
 }
 
 #board
@@ -7,22 +7,22 @@ body {
     display: flex;
     flex-direction: row;
     flex-wrap:wrap;
-    width: 500px;
-    height: 500px;
-    /* justify-content:flex-start; */
+    width: 250px;
+    height: 250px;
+    justify-content:flex-start;
     /* visibility: hidden; */
-    /* background-color: 	#B22222 */
+    background-color: 	#B22222
 }
 
 /* Use the . because square is a class */
   .square {
-    height: 100px;
-    width: 100px;
+    height: 50px;
+    width: 50px;
     box-sizing: border-box;
     border: 1px solid black;
-    /* font-size: 3em; */
-    /* display: flex; */
-    /* justify-content: center; */
-    /* align-items: center; */
+    font-size: 3em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     }
