--- a/index.css
+++ b/index.css
@@ -7,8 +7,8 @@ body {
     display: flex;
     flex-direction: row;
     flex-wrap:wrap;
-    width: 500px;
-    height: 500px;
+    /* width: 500px; */
+    /* height: 500px; */
     justify-content:flex-start;
     /* visibility: hidden; */
     background-color: 	#B22222
@@ -25,4 +25,10 @@ body {
     justify-content: center;
     align-items: center;
 
+    }
+
+    #scoreboard{
+      color: white;
+      font-family: "Arial Black", Gadget, sans-serif;
+      font-size: medium;
     }
