--- a/index.css
+++ b/index.css
@@ -32,3 +32,9 @@ body {
       font-family: "Arial Black", Gadget, sans-serif;
       font-size: medium;
     }
+
+    #GameOverMessage{
+      color: white;
+      font-family: "Arial Black", Gadget, sans-serif;
+      font-size: large;
+    }
